Fri Apr  2 15:32:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/ami_interface_ch.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
        * TAO_IDL/be_include/be_visitor_connector/facet_ami_exs.h:
        
          Changes to AMI-related visitors to support inheritance in
          generated AMI4CCM reply handler interfaces.

Fri Apr 02 10:50:48 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

	      * TAO version 1.7.8 released.

Wed Mar 31 15:22:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp:
        
          Fixed incorrect code generation for the connector executor
          implementation base class, which compiled but caused a
          runtime crash.

Wed Mar 31 13:15:05 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_root/root_cs.cpp:
        
          Fixed bug in generation of *A.cpp file when versioning
          macros are specified.

Wed Mar 31 11:28:14 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/OBV/TC_Alignment/run_test.pl:
        * tests/OBV/TC_Alignment/server.cpp:
        Pass ior filename through commandline.

Wed Mar 31 09:01:14 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:
          Disabled test for bug#3837 on static builds.

Wed Mar 31 06:51:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
          Fixed variable not used arnings

Tue Mar 30 19:32:19 UTC 2010  Olli Savia  <ops@iki.fi>

        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp: